1.20 update - compiles
Notable changes
* Faucets and channels no longer disallow gases, for consistency with new tinkers behavior
* Removed data holder models in favor of newer Mantle systems

Remaining tasks:
* Run datagen
* Add in data generators for new faucet fluid
* Add blacklist for fluids with weird behavior (notably potions shouldn't go in clay buckets)
* Validate JEI behavior of filled buckets